fixing bug on mobile with inline-svgs (#8)
* fixing bug on mobile with inline-svgs

* removing extra animated files

* adding newline to the end of a couple files

* adding inline svgs to plugins list

* updating Gemfile to use svg_optimizer (0.2.5) vs svg_optimizer (0.2.6)

--- a/assets/post.scss
+++ b/assets/post.scss
@@ -2,10 +2,15 @@
 # Styling for the post layout
 ---
 
-// @import "main";
+
 @mixin sans-serif-font {
   font: 400 16px/1.5 avenir next, avenir, -apple-system, BlinkMacSystemFont,
     helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+  @content;
+}
+
+@mixin monospace-font {
+  font: 400 12px/1 monaco, menlo, courier, monospace;
   @content;
 }
 
@@ -102,4 +107,8 @@ $very-soft-gray: #e8e8e8;
 blockquote {
   font-size: 1rem;
   letter-spacing: 1.25px;
+}
+
+code {
+  @include monospace-font;
 }
